--- a/Pathfinding_GUI/mainwindow.ui
+++ b/Pathfinding_GUI/mainwindow.ui
@@ -51,11 +51,29 @@
     </item>
     <item row="1" column="1">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <layout class="QHBoxLayout" name="horizontalLayout"/>
-      </item>
-      <item row="1" column="0">
+      <item row="2" column="1">
        <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>On Left/Right</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="comboBox">
+          <item>
+           <property name="text">
+            <string>Node/Block</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Start/Finish</string>
+           </property>
+          </item>
+         </widget>
+        </item>
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
@@ -119,6 +137,9 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item row="0" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout"/>
       </item>
      </layout>
     </item>
